--- a/ssh/config
+++ b/ssh/config
@@ -3,6 +3,16 @@ host wells
     port 2222
     user rienspy
 
+host verne
+    hostname kelder.zeus.ugent.be
+    port 2223
+    user root
+
+host verne.local
+    hostname verne
+    port 2223
+    user root
+
 host king
     hostname zeus.ugent.be
     port 2222
