--- a/config/terminator/config
+++ b/config/terminator/config
@@ -1,4 +1,5 @@
 [global_config]
+  enabled_plugins = LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
   focus = system
   title_font = Sans 40
   title_transmit_bg_color = "#d30102"
@@ -15,8 +16,17 @@
 [plugins]
 [profiles]
   [[default]]
+    background_color = "#002b36"
+    background_darkness = 0.89
     background_image = None
-    font = Monospace 12
+    background_type = transparent
+    cursor_color = "#eee8d5"
+    font = Roboto Mono 12
+    foreground_color = "#eee8d5"
+    login_shell = True
+    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
+    scrollback_infinite = True
+    scrollbar_position = hidden
     show_titlebar = False
     use_system_font = False
   [[Galaxy]]
