--- a/tmux.conf
+++ b/tmux.conf
@@ -52,10 +52,9 @@ bind -n M-K resize-pane -U 5
 bind -n M-L resize-pane -R 5
 
 # Session management
-bind -n M-a command-prompt -p '[Attach] Name? ' 'attach -t "%1"'
+bind -n M-a command-prompt -p '[Attach/New] Name? ' 'new-session -A -s "%1"'
 bind -n M-A attach
 bind -n M-s list-sessions
-
 # If the current session-name is a number, ask to change it.
 bind -n M-d if-shell '[[ "#S" =~ ^-?[0-9]+$ ]]' 'command-prompt -p "[Detach] Name? " "rename-session %1 ; detach"' 'detach'
 bind -n M-D detach
