--- a/tmux.conf
+++ b/tmux.conf
@@ -71,3 +71,16 @@ bind -n M-p run 'xclip -o -sel clipboard | tmux load-buffer -' \; paste-buffer
 bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-pipe 'xclip -i -sel clipboard'
 
+# Unbind function keys
+unbind F1
+unbind F2
+unbind F3
+unbind F4
+unbind F5
+unbind F6
+unbind F7
+unbind F8
+unbind F9
+unbind F10
+unbind F11
+unbind F12
