--- a/dotfiles/ssh/config
+++ b/dotfiles/ssh/config
@@ -1,3 +1,14 @@
+host vop
+    hostname vopro7.ugent.be
+    port 2002
+    LocalForward 8090 localhost:8090
+    LocalForward 9000 localhost:9000
+    user rbmaerte
+
+host itech webdev
+    hostname groep22.webdev.idlab.technology
+    user groep22
+
 host beata
     hostname beata.rxn.be
     port 9450
@@ -51,7 +62,7 @@ host adams a
 host masjiene m
     hostname masjiene.rxn.be
     port 2222
-    user rien
+    user root
 
 host peter.local pl
     hostname 192.168.1.33
@@ -66,7 +77,7 @@ host peter p
 host gunnar droplet do g
     hostname gunnar.rxn.be
     port 9450
-    user rien
+    user root
 
 host we12s300 s300
     hostname we12s300
