Update broke tmux, now fix again.

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -68,8 +68,8 @@ bind -n M-- split-window -v -c '#{pane_current_path}'
 # v, y and p as in vim. Let it copy to ICCCM clipboard.
 bind -n M-c copy-mode
 bind -n M-p run 'xclip -o -sel clipboard | tmux load-buffer -' \; paste-buffer
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-pipe 'xclip -i -sel clipboard'
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe 'xclip -i -sel clipboard'
 
 # Unbind function keys
 unbind F1
