--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -66,10 +66,10 @@ bind -n M-'\' split-window -h -c '#{pane_current_path}'
 bind -n M-- split-window -v -c '#{pane_current_path}'
 
 # v, y and p as in vim. Let it copy to ICCCM clipboard.
-bind -n M-c copy-mode
+bind -n M-c copy-mode -e
 bind -n M-p run 'xclip -o -sel clipboard | tmux load-buffer -' \; paste-buffer
 bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe 'xclip -i -sel clipboard'
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -i -sel clipboard'
 
 # Unbind function keys
 unbind F1
