--- a/dotfiles/rubocop.yml
+++ b/dotfiles/rubocop.yml
@@ -9,11 +9,13 @@ AllCops:
     - 'script/**/*'
     - !ruby/regexp /old_and_unused\.rb$/
 
-Style/FrozenStringLiteralComment:
-  Enabled: false
+# Style/FrozenStringLiteralComment:
+#   Enabled: false
 Style/TrailingBlankLines:
   Enabled: false
 Style/Documentation:
   Enabled: false
 Style/EmptyMethod:
   Enabled: false
+Style/ClassAndModuleChildren:
+  EnforcedStyle: compact
