--- a/config/alot/config
+++ b/config/alot/config
@@ -2,6 +2,7 @@ initial_command = "search tag:inbox"
 prefer_plaintext = True
 editor_cmd = "vim"
 bug_on_exit = True
+sign_by_default = True
 
 [bindings]
     0 = taglist
@@ -30,8 +31,9 @@ bug_on_exit = True
 [accounts]
     [[posteo]]
         realname = Rien Maertens
-        address = rien@posteo.net
-        alias_regexp = rien\+.+@posteo.net
+        address = rien.maertens@posteo.be
+        alias_regexp = rien.maertens\+.+@posteo.be
+        gpg_key = 6EFE691C8362F089BB02C2936D876BD313662F0E
         sendmail_command = msmtp --account=posteo -t
         sent_box = maildir:///home/rien/mail/posteo/Sent
         draft_box = maildir:///home/rien/mail/posteo/Drafts
@@ -40,6 +42,7 @@ bug_on_exit = True
         realname = Rien Maertens
         address = maertensrien@gmail.com
         alias_regexp = maertensrien\+.+@gmail.com
+        gpg_key = 6EFE691C8362F089BB02C2936D876BD313662F0E
         sendmail_command = msmtp --account=maertensrien-gmail -t
         sent_box = maildir:///home/rien/mail/maertensrien-gmail/Sent
         draft_box = maildir:///home/rien/mail/maertensrien-gmail/Drafts
@@ -48,6 +51,7 @@ bug_on_exit = True
         realname = Rien Maertens
         address = rien.maertens@ugent.be
         sendmail_command = msmtp --account=ugent -t
+        gpg_key = 6EFE691C8362F089BB02C2936D876BD313662F0E
         sent_box = maildir:///home/rien/mail/ugent/Sent
         draft_box = maildir:///home/rien/mail/ugent/Drafts
 
