--- a/tmux.conf
+++ b/tmux.conf
@@ -14,7 +14,7 @@ set -g history-limit 100000
 
     ### Design ###
 
-set -g default-terminal xterm-256color
+set -g default-terminal screen-256color
 
 # Set window notifications
 setw -g monitor-activity on
