No status bar for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,4 @@
-
-    ### Options ###
+### Options ###
 set -g display-time 2500
 
 # No escape delay
@@ -11,26 +10,15 @@ set -g mouse on
 set -g mode-keys vi
 set -g history-limit 100000
 
+### Design ###
+set -g default-terminal "tmux-256color"
 
-    ### Design ###
-
-set -g default-terminal screen-256color
-
-# Set window notifications
-setw -g monitor-activity on
-set -g visual-activity on
-
-# Update window titles
-set -g set-titles on
-set -g set-titles-string "[#S] #T"
-
-# Status bar
-set -g status-interval 1
-set -g status-justify centre
+# No status bar
+set -g status off
 set -g status-keys vi
 
 
-    ### Keybindings ###
+### Keybindings ###
 
 # Re-read .tmux.conf while running
 bind r source-file ~/.tmux.conf
