--- a/ssh/config
+++ b/ssh/config
@@ -1,3 +1,11 @@
+host mohowzeg.kot
+    hostname 10.0.1.23
+    user root
+
+host mohowzeg.usb
+    hostname 10.11.99.1
+    user root
+
 host pandora
     hostname pandora.ugent.be
     user dodona
